--- a/project.json
+++ b/project.json
@@ -1,6 +1,12 @@
 {
-	"name":"MassiveConsole",
-	"version":"1.2.1",
-	"id":"mconsole",
-	"dependencies":{}
+	"project": 
+	{
+		"name": "MassiveConsole",
+		"version": "1.2.2",
+		"id": "mconsole",
+		"dependencies": 
+		{
+
+		}
+	}
 }
