--- a/project.json
+++ b/project.json
@@ -4,10 +4,13 @@
 		"name": "MassiveConsole",
 		"version": "1.3.0",
 		"id": "mconsole",
-		"dependencies":{},
+		"dependencies":
+		{
+			"mtask": "1.x",
+		},
 		"devDependencies":
 		{
-			"mtask": "haxe3",
+			"mtask": "1.x",
 			"munit": "feature/haxe-3",
 			"mcover": "feature/haxe-3"
 		}
