Fixed dev dependencies so they won't break the next time someone upgrades (munit doesn't curently have hamcrest dependency, like it should)

--- a/project.json
+++ b/project.json
@@ -1,15 +1,16 @@
 {
 	"project": 
 	{
+		"id": "mconsole",
 		"name": "MassiveConsole",
 		"version": "1.3.0",
-		"id": "mconsole",
 		"dependencies":{},
 		"devDependencies":
 		{
 			"mtask": "1.x",
-			"munit": "2.x",
-			"mcover": "2.x"
+			"hamcrest":"1.x",
+			"munit":"2.x",
+			"mcover":"2.x"
 		}
 	}
 }
